2008-01-21 Benny Malengier <benny.malengier@gramps-project.org>
	*  part 2 of workaround around bug
		http://bugzilla.gnome.org/show_bug.cgi?id=56070, make forward
		button accept click after it becomes sensitive.

2008-01-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/Check.py: bug (buglist) wrong method call

2008-01-20 Brian Matherly <brian@gramps-project.org>
	* src/docgen/SvgDrawDoc.py: 
	0001321: Ancester Graph SVG Export dosn't show text

2008-01-20 Brian Matherly <brian@gramps-project.org>
	* src/Mime/_WinMime.py: 
	0001483: Cannot display media files within GRAMPS (running on MS Vista)

2008-01-20 Brian Matherly <brian@gramps-project.org>
	* src/plugins/Makefile.am:
	* po/POTFILES.in:
	Remove FamilyLines and GraphVis.py from distribution and translation.

2008-01-19  Gary Burton <gary.burton@zen.co.uk>
	* src/GrampsDbUtils/_ReadXML.py: Remove print debugging statements

2008-01-19  Gary Burton <gary.burton@zen.co.uk>
	* src/DbManager.py: Fix date regular expression used to find rcs
	revisions also found in Bug #1622

2008-01-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: Test for missing path. Bug #1622

2008-01-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py (cleanup_column_name): 
	use given, givenname as aliases for firstname;
	give better warning for missing data on row

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /po/nl.po: new translations

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /src/plugins/StatisticsChart.py: typo :740

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /src/plugins/FamilyGroup.py: typo :590

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
    * po/gramps.pot: new gramps.pot generated

2008-01-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py (SurnameCloudGramplet.main): 
	use const.NO_SURNAME to display blank entries